fix overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,5 @@
     			height: 100%;
     			background-color: rgba(155,155,155,0.7);
     			z-index: 10;
+                overflow: auto;
     		}
